2003-07-03  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1: document that.

	* pbuilder-user-mode-linux (UML_DEBUGMODE): interpret --configfile itself and then pass to pbuilder.

2003-06-07  Junichi Uekawa  <dancer@debian.org>

	* pbuilder.8: update documentation so that --othermirror is obvious.

2003-05-17  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on pbuilder
	backport.

2003-04-24  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: note that --configfile option
	is useful for switching distributions.

2003-04-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: use Source: rather than Format.
	Format does not exist on very old .dsc files.
	189691 Daniel Schepler

2003-04-19  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: update copyright date.

	* pbuilder-buildpackage (PACKAGENAME): moved around D hook location
	so that D hook is called before satisfying build-deps.
	update copyright date.

	* pbuilder.8: minor improvements on the documentation wording.

2003-04-17  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (PBUILDER_UML_IMAGE): update and document 
	/tmp peculiarity.

	* pbuilder-user-mode-linux.1: document /tmp peculiarity

2003-04-11  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update TODO, bind mount, and other entries.

2003-04-10  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): added id tags to 
	facilitate with wysidocbookxml

2003-04-09  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux (EXTRAOPT): Change to use new hostfs options
	for user-mode-linux

2003-04-08  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation a bit.

	* debian/TODO: update the TODO file wrt bind-mount/hostfs for UML.

	* pbuilder-user-mode-linux: Do not try to umount 
	the mountpoints. There is no point in doing that.