@@ -68,7 +68,14 @@ will be able to return the FQDN.
 The directory where build result of pbuilder-user-mode-linux 
 is stored.
 
-.SH AUTHOR
+.SH "NOTES"
+
+It is advised to set 
+.B "APTCACHEHARDLINK"
+to no in 
+.B "pbuilderrc(5)"
+
+.SH "AUTHOR"
 Initial coding, and main maintenance is done by 
 Junichi Uekawa <dancer@debian.org>.
 
