@@ -135,6 +135,10 @@ Specify using hard links in apt cache handling.
 Changing this to no will disable hard linking and will
 copy the files.
 
+It is advised to set this to 
+.B "no"
+if you are using user-mode-linux.
+
 .TP
 .BI "REMOVEPACKAGES=" "lilo"
 Specify the packages to be removed on creation of 
