@@ -1,3 +1,11 @@
+2003-07-08  Junichi Uekawa  <dancer@debian.org>
+
+	* pbuilderrc.5: update to note about user-mode-linux quirks.
+
+	* pbuilder-uml.conf.5: note that APTCACHEHARDLINK
+
+	* Documentation/pbuilder-doc.xml: document the error for LOGNAME not defined warning, Invalid cross-device link error, and conflict against essential being a bad idea.
+
 2003-07-03  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-user-mode-linux.1: document that.
